SecondaryNavbar misalignment fix (#98)

--- a/src/pages/common/components/SecondaryNavbar/SecondaryNavbar.less
+++ b/src/pages/common/components/SecondaryNavbar/SecondaryNavbar.less
@@ -6,7 +6,7 @@
         border-bottom: 1px solid @classic-neutral-grey-3;
         height: 52px;
         justify-content: normal;
-        padding: 0 16px;
+        padding: 0 16px 0 9px;
     }
 
     .link {
